2010-05-12  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        Bug 38689: #34005 will break fullscreen video playback
        https://bugs.webkit.org/show_bug.cgi?id=38689

        Use the new definition of PlatformMedia to check the actual type
        returned by MediaPlayer.

        * FullscreenVideoController.cpp:
        (FullscreenVideoController::movie):
2010-05-12  Jer Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Bug 38689: #34005 will break fullscreen video playback
        https://bugs.webkit.org/show_bug.cgi?id=38689

        Use the new definition of PlatformMedia to check the actual type
        returned by MediaPlayer.

        * WebView/WebVideoFullscreenController.mm:
        (-[WebVideoFullscreenController windowDidLoad]):
2010-05-12  Jer Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Bug 38689: #34005 will break fullscreen video playback
        https://bugs.webkit.org/show_bug.cgi?id=38689

        The PlatformMedia struct now contains a type field indicating which type
        it contains.  The struct now contains a union of all possible return types,
        allowing the type of media returned by MediaPlayerPrivate instances to be
        determined at runtime.

        * platform/graphics/MediaPlayer.h:
        (WebCore::PlatformMedia::):
        (WebCore::):
        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::platformMedia):
        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp:
        (WebCore::MediaPlayerPrivateQuickTimeVisualContext::platformMedia):
        * platform/graphics/win/MediaPlayerPrivateQuickTimeWin.cpp:
        (WebCore::MediaPlayerPrivate::platformMedia):


Canonical link: https://commits.webkit.org/50470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59232 268f45cc-cd09-0410-ab3c-d52691b4dbfc