third_party/WebKit/WebCore/platform/graphics/MediaPlayer.cpp
@@ -64,6 +64,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+const PlatformMedia NoPlatformMedia = { PlatformMedia::None, {0} };
+
 // a null player to make MediaPlayer logic simpler
 
 class NullMediaPlayerPrivate : public MediaPlayerPrivateInterface {
